WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183049
Fix build error with !LOG_DISABLED
https://bugs.webkit.org/show_bug.cgi?id=183049
Summary
Fix build error with !LOG_DISABLED
Charlie Turner
Reported
2018-02-22 11:33:11 PST
Fix build error with !LOG_DISABLED
Attachments
Patch
(1.15 KB, patch)
2018-02-22 11:34 PST
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Patch
(2.02 KB, patch)
2018-02-26 04:03 PST
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.02 KB, patch)
2018-02-26 04:21 PST
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.02 KB, patch)
2018-02-26 04:32 PST
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Charlie Turner
Comment 1
2018-02-22 11:34:49 PST
Created
attachment 334460
[details]
Patch
Charlie Turner
Comment 2
2018-02-26 04:03:48 PST
Created
attachment 334609
[details]
Patch
Charlie Turner
Comment 3
2018-02-26 04:21:19 PST
Created
attachment 334610
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2018-02-26 04:22:52 PST
Comment on
attachment 334610
[details]
Patch for landing Rejecting
attachment 334610
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 334610, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/6674187
Charlie Turner
Comment 5
2018-02-26 04:32:37 PST
Created
attachment 334611
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2018-02-26 05:07:46 PST
Comment on
attachment 334611
[details]
Patch for landing Clearing flags on attachment: 334611 Committed
r229004
: <
https://trac.webkit.org/changeset/229004
>
WebKit Commit Bot
Comment 7
2018-02-26 05:07:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-02-26 05:08:19 PST
<
rdar://problem/37897889
>
Darin Adler
Comment 9
2018-02-26 18:26:30 PST
Comment on
attachment 334611
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=334611&action=review
> Source/WebCore/dom/messageports/MessagePortChannel.h:64 > String logString() const { return makeString(m_ports[0].logString(), ":", m_ports[1].logString()); }
This should be ':' instead of ":" for slightly better performance.
Charlie Turner
Comment 10
2018-02-27 02:40:50 PST
(In reply to Darin Adler from
comment #9
)
> Comment on
attachment 334611
[details]
> Patch for landing > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=334611&action=review
> > > Source/WebCore/dom/messageports/MessagePortChannel.h:64 > > String logString() const { return makeString(m_ports[0].logString(), ":", m_ports[1].logString()); } > > This should be ':' instead of ":" for slightly better performance.
Can place this into a separate issue if it's causing you performance regressions; this bug wasn't touching that line, I wanted to keep it specific to the build fix rather than speculative performance improvements on my end (I don't have any benchmarking infrastructure for such things)
Darin Adler
Comment 11
2018-02-28 14:40:19 PST
(In reply to Charlie Turner from
comment #10
)
> Can place this into a separate issue
Sure that would be fine. But you really don’t have to do anything.
> if it's causing you performance regressions
That seems like a strange turn of phrase. Definitely no "regression" here. I was just commenting about best practices, as I do whenever I see code near code being reviewed, something I’ve always done through the whole lifetime of the WebKit project. I understand this may be your first time seeing it.
> this bug wasn't touching that line, I wanted to keep it > specific to the build fix rather than speculative performance improvements > on my end (I don't have any benchmarking infrastructure for such things)
Yes, wasn’t criticizing what you have done. I was pointing out for anyone looking at this bug who cares to learn best practices, including but not limited to you, that this happens to use a slightly less efficient idiom.
Charlie Turner
Comment 12
2018-03-01 06:06:19 PST
Hi Darin, (In reply to Darin Adler from
comment #11
)
> > if it's causing you performance regressions > > That seems like a strange turn of phrase. Definitely no "regression" here. > > I was just commenting about best practices, as I do whenever I see code near > code being reviewed, something I’ve always done through the whole lifetime > of the WebKit project. > > I understand this may be your first time seeing it.
I appreciate it :). I assumed you wanted it changing with this patch, but now I know better. I never know what the rdar bug importer is doing, and assumed perhaps Apple was running performance testing builds that flagged it with LOG_DISABLED=0 in release.
Darin Adler
Comment 13
2018-03-01 09:03:09 PST
(In reply to Charlie Turner from
comment #12
)
> I never know what the rdar bug importer is doing
The "bug importer" just registers the bug in Apple’s internal bug system. It doesn’t generally mean anything to us working on the WebKit project except that Apple plans to track this bug as it is fixed and the fix is integrated. I wish there was a simple way of annotating WebKit bugs that was less distracting since it has no significance for people outside Apple. There could be some kind of discussion of a bug inside Apple that is not visible in bugs.webkit.org because there are people at Apple who work on WebKit who sit next to each other and they do talk to each other. And there are *occasional* subjects discussed in email and Apple’s internal bug system, but generally seeing the "bug importer" thing on a bug does not indicate anything going on for a particular bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug