Fix build error with !LOG_DISABLED https://bugs.webkit.org/show_bug.cgi?id=183049

Reviewed by Philippe Normand.

The following error message was being reported when doing a
release build with -DLOG_DISABLED=0:

../../Source/WebCore/dom/messageports/MessagePortChannel.cpp: In member function ‘void WebCore::MessagePortChannel::entanglePortWithProcess(const WebCore::MessagePortIdentifier&, WebCore::ProcessIdentifier)’:


Canonical link: https://commits.webkit.org/198843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229004 268f45cc-cd09-0410-ab3c-d52691b4dbfc